[gd_scene load_steps=3 format=3 uid="uid://brgfjlhrbthc3"]

[ext_resource type="Script" path="res://home_screen.gd" id="1_6nbs6"]
[ext_resource type="FontFile" uid="uid://bw7uxmmpcwkj" path="res://fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" id="2_0bts5"]

[node name="HomeScreen" type="CanvasLayer"]
script = ExtResource("1_6nbs6")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = 94.0
offset_right = 126.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00011
theme_override_fonts/font = ExtResource("2_0bts5")
theme_override_font_sizes/font_size = 45
text = "Start"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -11.5
offset_right = 55.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00105368
theme_override_fonts/font = ExtResource("2_0bts5")
theme_override_font_sizes/font_size = 80
text = "Koi And Arrow"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Dash" type="Button" parent="."]
visible = false
offset_left = 922.0
offset_top = 230.0
offset_right = 1067.0
offset_bottom = 312.0
theme_override_fonts/font = ExtResource("2_0bts5")
theme_override_font_sizes/font_size = 30
text = "DASH"

[node name="Shield" type="Button" parent="."]
visible = false
offset_left = 916.0
offset_top = 364.0
offset_right = 1061.0
offset_bottom = 446.0
theme_override_fonts/font = ExtResource("2_0bts5")
theme_override_font_sizes/font_size = 30
text = "SHIELD"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Dash" to="." method="_on_dash_pressed"]
[connection signal="pressed" from="Shield" to="." method="_on_shield_pressed"]
